--- a/portfolio.html
+++ b/portfolio.html
@@ -47,13 +47,11 @@
                     +38 096 111 11 11</a>
             </li>
         </ul>
-        <ul class="header__mobile">
             <button type="button" class="mobile-button" data-mobile-open>
-                <svg class="header-mobile-item">
+                <svg class="header-mobile-item" width="40" height="40">
                     <use href="./imeges/icons.svg#icon-menu"></use>
                 </svg>
             </button>
-        </ul>
         </div>
         <div class="mob-menu is-hidden" data-mobile>
             <div class="container">
@@ -129,7 +127,7 @@
                         <button type="button" class="menu__btn">Маркетинг</button>
                     </li>
                 </ul>
-            <ul class="list bedge section">
+            <ul class="list bedge">
                <li class="bedge__list">
                     <a class="link bedge__link" href="">
                         <div class="bedge-link-wrap">
@@ -145,7 +143,7 @@
                                 <source srcset="
                                     ./imeges/bedge/bedge-img-mob-1-1x.jpg  1x, 
                                     ./imeges/bedge/bedge-img-mob-1-2x.jpg  2x" 
-                                    media="(min-width: 480px)" />
+                                    media="" />
                                 <img src="./imeges/bedge/bedge-img-1.jpg" alt="ноутбук">
                             </picture>
                             <p class="imeges-text">
@@ -174,7 +172,7 @@
                                 <source srcset="
                                     ./imeges/bedge/bedge-img-mob-2-1x.jpg  1x, 
                                     ./imeges/bedge/bedge-img-mob-2-2x.jpg  2x" 
-                                    media="(min-width: 480px)" />
+                                    media="" />
                                 <img src="./imeges/bedge/bedge-img-2.jpg" alt="Баскетбол">
                             </picture>
                             <p class="imeges-text">
@@ -203,7 +201,7 @@
                                 <source srcset="
                                     ./imeges/bedge/bedge-img-mob-3-1x.jpg  1x, 
                                     ./imeges/bedge/bedge-img-mob-3-2x.jpg  2x" 
-                                    media="(min-width: 480px)" />
+                                    media="" />
                                 <img src="./imeges/bedge/bedge-img-3.jpg" alt="Ресторан">
                             </picture>
                             <p class="imeges-text">
@@ -232,7 +230,7 @@
                                 <source srcset="
                                     ./imeges/bedge/bedge-img-mob-4-1x.jpg  1x, 
                                     ./imeges/bedge/bedge-img-mob-4-2x.jpg  2x" 
-                                    media="(min-width: 480px)" />
+                                    media="" />
                                 <img src="./imeges/bedge/bedge-img-4.jpg" alt="Наушники">
                             </picture>
                             <p class="imeges-text">
@@ -261,7 +259,7 @@
                                 <source srcset="
                                     ./imeges/bedge/bedge-img-mob-5-1x.jpg  1x, 
                                     ./imeges/bedge/bedge-img-mob-5-2x.jpg  2x" 
-                                    media="(min-width: 480px)" />
+                                    media="" />
                                 <img src="./imeges/bedge/bedge-img-5.jpg" alt="Упаковки">
                             </picture>
                             <p class="imeges-text">
@@ -290,7 +288,7 @@
                                 <source srcset="
                                     ./imeges/bedge/bedge-img-mob-6-1x.jpg  1x, 
                                     ./imeges/bedge/bedge-img-mob-6-2x.jpg  2x" 
-                                    media="(min-width: 480px)" />
+                                    media="" />
                                 <img src="./imeges/bedge/bedge-img-6.jpg" alt="Монитор">
                             </picture>
                             <p class="imeges-text">
@@ -319,7 +317,7 @@
                                 <source srcset="
                                     ./imeges/bedge/bedge-img-mob-7-1x.jpg  1x, 
                                     ./imeges/bedge/bedge-img-mob-7-2x.jpg  2x" 
-                                    media="(min-width: 480px)" />
+                                    media="" />
                                 <img src="./imeges/bedge/bedge-img-7.jpg" alt="Журнал">
                             </picture>
                             <p class="imeges-text">
@@ -348,7 +346,7 @@
                                 <source srcset="
                                     ./imeges/bedge/bedge-img-mob-8-1x.jpg  1x, 
                                     ./imeges/bedge/bedge-img-mob-8-2x.jpg  2x" 
-                                    media="(min-width: 480px)" />
+                                    media="" />
                                 <img src="./imeges/bedge/bedge-img-8.jpg" alt="Бирка">
                             </picture>
                             <p class="imeges-text">
@@ -377,7 +375,7 @@
                                 <source srcset="
                                     ./imeges/bedge/bedge-img-mob-9-1x.jpg  1x, 
                                     ./imeges/bedge/bedge-img-mob-9-2x.jpg  2x" 
-                                    media="(min-width: 480px)" />
+                                    media="" />
                                 <img src="./imeges/bedge/bedge-img-9.jpg" alt="Ноутбук на столе">
                             </picture>
                             <p class="imeges-text">
