--- a/index.html
+++ b/index.html
@@ -45,13 +45,11 @@
                 +38 096 111 11 11</a>
            </li>
         </ul>
-        <ul class="header__mobile">
             <button type="button" class="mobile-button" data-mobile-open> 
-                <svg class="header-mobile-item">
+                <svg class="header-mobile-item" width="40" height="40">
                     <use href="./imeges/icons.svg#icon-menu"></use>
                 </svg>
             </button>
-        </ul>
         </div>
         <div class="mob-menu is-hidden" data-mobile>
             <div class="container">
@@ -119,7 +117,7 @@
            <ul class="list prior__list">
                <li class="prior__item">
                    <div class="prior-box-icon">
-                       <svg class="prior-icon" width="70" hidden="70">
+                       <svg class="prior-icon" width="70" height="70">
                            <use href="imeges/icons.svg#icon-antenna"></use>
                        </svg>
                    </div>
@@ -128,7 +126,7 @@
                </li>
                <li class="prior__item">
                    <div class="prior-box-icon">
-                       <svg class="prior-icon" width="70" hidden="70">
+                       <svg class="prior-icon" width="70" height="70">
                            <use href="./imeges/icons.svg#icon-clock"></use>
                        </svg>
                    </div>
@@ -137,7 +135,7 @@
                 </li>
                 <li class="prior__item">
                     <div class="prior-box-icon">
-                        <svg class="prior-icon" width="70" hidden="70">
+                        <svg class="prior-icon" width="70" height="70">
                             <use href="./imeges/icons.svg#icon-diagram"></use>
                         </svg>
                     </div>
@@ -146,7 +144,7 @@
                 </li>
                 <li class="prior__item">
                     <div class="prior-box-icon">
-                        <svg class="prior-icon" width="70" hidden="70">
+                        <svg class="prior-icon" width="70" height="70">
                             <use href="./imeges/icons.svg#icon-astronaut"></use>
                         </svg>
                     </div>
@@ -399,35 +397,35 @@
                     </li>
                     <li class="link client__link">
                         <a class="client-item" href="">
-                            <svg class="client-icon" width="106" heigth="60">
+                            <svg class="client-icon" width="106" height="60">
                                 <use href="./imeges/icons.svg#icon-logo-2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="link client__link">
                         <a class="client-item" href="">
-                            <svg class="client-icon" width="106" heigth="60">
+                            <svg class="client-icon" width="106" height="60">
                                 <use href="./imeges/icons.svg#icon-logo-3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="link client__link">
                         <a class="client-item" href="">
-                            <svg class="client-icon" width="106" heigth="60">
+                            <svg class="client-icon" width="106" height="60">
                                 <use href="./imeges/icons.svg#icon-logo-4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="link client__link">
                         <a class="client-item" href="">
-                            <svg class="client-icon" width="106" heigth="60">
+                            <svg class="client-icon" width="106" height="60">
                                 <use href="./imeges/icons.svg#icon-logo-5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="link client__link">
                         <a class="client-item" href="">
-                            <svg class="client-icon" width="106" heigth="60">
+                            <svg class="client-icon" width="106" height="60">
                                 <use href="./imeges/icons.svg#icon-logo-6"></use>
                             </svg>
                         </a>
@@ -561,7 +559,7 @@
                         <a href="" class="check-terms">Условия договора</a></label>
                     </div>
                     <div class="position-button">
-                    <button type="submit" class="modal__button">Отправить</button>
+                        <button type="submit" class="modal__button">Отправить</button>
                     </div>
                 </form>
             </div>
